--- a/NewApp/app/views/layouts/application.html.erb
+++ b/NewApp/app/views/layouts/application.html.erb
@@ -2,15 +2,18 @@
 <html>
 <head>
   <title>NewApp</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-   <ul>
+  <div class="container">
+   <ul class="nav nav-tabs">
         <li><%= link_to "Home", welcome_index_path %></li>
         <li><%= link_to "About", welcome_about_path %></li>
    </ul>
 <%= yield %>
+</div>
 <!-- What are we yielding to? -->
 </body>
 </html>
