--- a/NewApp/app/assets/stylesheets/welcome.scss
+++ b/NewApp/app/assets/stylesheets/welcome.scss
@@ -14,3 +14,11 @@ h1 {
    padding: 5px;
    height: 200px;
  }
+
+  section {
+   background: #5998ff;
+   border-style: solid;
+   border-width: 5px;
+   margin: 5px 5px 5px 5px;
+   padding: 5px 5px 5px 5px;
+ }
