--- a/NewApp/app/assets/stylesheets/welcome.scss
+++ b/NewApp/app/assets/stylesheets/welcome.scss
@@ -22,3 +22,9 @@ h1 {
    margin: 5px 5px 5px 5px;
    padding: 5px 5px 5px 5px;
  }
+
+ .social-btn {
+   color:green;
+   background-color: pink;
+   padding: 5px 5px 5px 5px;
+ }
