--- a/NewApp/app/views/layouts/application.html.erb
+++ b/NewApp/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
    <ul class="nav nav-tabs">
         <li><%= link_to "Home", welcome_index_path %></li>
         <li><%= link_to "About", welcome_about_path %></li>
+        <li><%= link_to "Follow me", "https://www.facebook.com/morgan.oleary.50"%></li>
    </ul>
 <%= yield %>
 </div>
