--- a/NewApp/app/views/layouts/application.html.erb
+++ b/NewApp/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
   <div class="container">
    <ul class="nav nav-tabs">
-        <li><%= link_to "Home", welcome_index_path %></li>
-        <li><%= link_to "About", welcome_about_path %></li>
+        <li><%= link_to "Bloccit", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Follow me", "https://www.facebook.com/morgan.oleary.50"%></li>
    </ul>
 <%= yield %>
