--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -14,12 +14,19 @@
              <%= link_to (post.markdown_title), [@topic, post] %>
            </h4>
          </div>
+         <small>
+      <%= image_tag(post.user.avatar.tiny.url) if post.user.avatar? %>
+        submitted <%= time_ago_in_words(post.created_at) %> ago by
+      <%= post.user.name %><br>
+      <%= post.comments.count %> Comments
+    </small>
        </div>
-     <% end %>
+      <% end %>
    </div>
    <div class="col-md-4">
      <% if policy(Post.new).create? %>
        <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
      <% end %>
    </div>
+   
  </div>
