add images to posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,9 @@
        submitted <%= time_ago_in_words(@post.created_at) %> ago by
        <%= @post.user.name %>
      </small>
+     <small>
+        <%= image_tag(@post.image.tiny.url) if @post.image? %>
+     </small>
      
     <p><%= @post.markdown_body %></p>
       </div>
