--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -20,6 +20,9 @@
       <%= post.user.name %><br>
       <%= post.comments.count %> Comments
     </small>
+    <small>
+        <%= image_tag(post.image.tiny.url) if post.image? %>
+    </small>
        </div>
       <% end %>
    </div>
