--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -25,6 +25,7 @@
     </small>
        </div>
       <% end %>
+      <%= will_paginate @posts %>
    </div>
    <div class="col-md-4">
      <% if policy(Post.new).create? %>
