--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,9 @@
      </small>
      
     <p><%= @post.markdown_body %></p>
-    <h4><%= render partial: 'comments/comment', locals: { topic: @topic, post: @post, comment: @comments }  if @comments%> </h4> 
+    <% if policy(@comment).create? %>
+    <h4><%= render partial: 'comments/form', locals: { topic: @topic, post: @post, comment: @comments } %></h4> 
+     <%end %> 
       </div>
   <div class="col-md-4">
     <% if policy(@post).edit? %>
