--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,13 +17,19 @@
      </small>
      
     <p><%= @post.markdown_body %></p>
-    <% if policy(@comment).create? %>
-    <h4><%= render partial: 'comments/form', locals: { topic: @topic, post: @post, comment: @comments } %></h4> 
+    <h3> Comments</h3>
+     <%= render partial: 'comments/comment', collection: @comments %>
+    <% if policy(@comment).create? %> 
+    <h4><%= render partial: 'comments/form', locals: { topic: @topic, post: @post } %></h4> 
+
      <%end %> 
       </div>
   <div class="col-md-4">
     <% if policy(@post).edit? %>
       <%= link_to "Edit", edit_topic_post_path(@topic, @post), class: 'btn btn-success' %>
     <% end %>
+    <% if policy(@post).destroy? %>
+       <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
+     <% end %>
   </div>
 </div>
