--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
-<h1><%= @post.markdown_title %></h1>
 <h2> <%= @summary.body if @summary %></h2>
   <% if @summary.nil? %>
 <%= link_to "New Summary",new_post_summary_path(@post,Summary.new)%>
@@ -7,6 +6,9 @@
 <%end %>
 <div class="row">
   <div class="col-md-8">
+    <%= render partial: 'votes/voter', locals: { post: @post } %>
+    <h1><%= @post.markdown_title %></h1>
+
      <small>
        <%= image_tag(@post.user.avatar.tiny.url) if @post.user.avatar? %>
        submitted <%= time_ago_in_words(@post.created_at) %> ago by
@@ -31,5 +33,12 @@
     <% if policy(@post).destroy? %>
        <%= link_to "Delete Post", [@topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
      <% end %>
+        <div>
+     <h3><%= pluralize(@post.points, 'point') %></h3>
+     <small>
+       <%= pluralize(@post.up_votes, 'up vote') %>,
+       <%= pluralize(@post.down_votes, 'down vote') %>
+     </small>
+   </div>
   </div>
 </div>
