still can't see the comment when I add it

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <% if current_user %>
   <h4>Add a comment:</h4>
-  <%= form_for [topic, post, post.comments.new], remote: true do |f| %>
+  <%= form_for [post, post.comments.new], remote: true do |f| %>
     <%= f.label :body %>
     <%= f.text_field :body %>
     <%= f.submit %>
