--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
     <h3> Comments</h3>
      <%= render partial: 'comments/comment', collection: @comments %>
     <% if policy(@comment).create? %> 
-    <h4><%= render partial: 'comments/form', locals: { topic: @topic, post: @post } %></h4> 
+    <h4><%= render partial: 'comments/form', locals: {  post: @post } %></h4> 
 
      <%end %> 
       </div>
