have the ajax working

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -5,5 +5,6 @@
     <%= f.text_field :body %>
     <%= f.submit %>
   <% end %>
-  
+<%= form_for [@post, Comment.new], remote: true do |f| %>
+<% end %>
 <% end %>
