--- a/app/views/topics/posts/show.html.erb
+++ b/app/views/topics/posts/show.html.erb
@@ -40,10 +40,13 @@
 
    
  <h3> Comments</h3>
+  <div class='js-comments'>
      <%= render partial: 'comments/comment', collection: @comments %>
+      </div>
+  <div class='new-comment'>
     <% if policy(@comment).create? %> 
     <h4><%= render partial: 'comments/form', locals: {  post: @post } %></h4> 
-    
+     </div>
      <%end %> 
       </div>
   
